cookies-consent: Avoid cookie consent box flicker
Start with the cookie-consent box hidden until we know the consent
status. This stops the cookie consent box being shown and then hidden
straight away causing a slight flicker.

--- a/src/components/02-elements/cookie-consent/cookie-consent.scss
+++ b/src/components/02-elements/cookie-consent/cookie-consent.scss
@@ -1,4 +1,5 @@
 .cookie-consent {
+  display: none;
   padding-top: 0 !important;
   width: 450px;
   height: 325px;
